@@ -1,3 +1,7 @@
+2005-06-20  Charles Levert  <charles_levert@gna.org>
+
+	* src/grep.c: Extensively document the SGR/EL-to-Right issue.
+
 2005-06-15  Charles Levert  <charles_levert@gna.org>
 
 	* tests/foad1.sh: Since this script is run by /bin/sh, it
